2867 Avoid “unchecked” warnings