@@ -31,8 +31,10 @@ import com.bytechef.atlas.execution.domain.TaskExecution;
 import com.bytechef.atlas.execution.service.ContextService;
 import com.bytechef.atlas.execution.service.TaskExecutionService;
 import com.bytechef.atlas.file.storage.TaskFileStorage;
+import com.bytechef.commons.util.MapUtils;
 import com.bytechef.evaluator.Evaluator;
 import com.bytechef.task.dispatcher.condition.util.ConditionTaskUtils;
+import com.fasterxml.jackson.core.type.TypeReference;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.time.Instant;
 import java.util.List;
@@ -86,7 +88,7 @@ public class ConditionTaskDispatcher extends ErrorHandlingTaskDispatcher impleme
         }
 
         if (!subWorkflowTasks.isEmpty()) {
-            WorkflowTask subWorkflowTask = subWorkflowTasks.get(0);
+            WorkflowTask subWorkflowTask = subWorkflowTasks.getFirst();
 
             TaskExecution subTaskExecution = TaskExecution.builder()
                 .jobId(taskExecution.getJobId())
@@ -121,11 +123,12 @@ public class ConditionTaskDispatcher extends ErrorHandlingTaskDispatcher impleme
     }
 
     private static List<WorkflowTask> getSubWorkflowTasks(TaskExecution conditionTaskExecution, String caseTrue) {
-        return ((List<Map<String, ?>>) conditionTaskExecution.getParameters()
-            .get(caseTrue))
-                .stream()
-                .map(WorkflowTask::new)
-                .toList();
+        return MapUtils
+            .getList(
+                conditionTaskExecution.getParameters(), caseTrue, new TypeReference<Map<String, ?>>() {}, List.of())
+            .stream()
+            .map(WorkflowTask::new)
+            .toList();
     }
 
     @Override
